--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <title>FYP_FRONTEND</title>
-  <base href="/" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&family=Lato&family=Lobster&family=Montserrat&family=Open+Sans&family=Oswald&display=swap"
-    rel="stylesheet">
-</head>
-
-<body class="mat-typography">
-  <app-root></app-root>
-</body>
-
+  <head>
+    <meta charset="utf-8" />
+    <title>FYP_FRONTEND</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="mat-typography">
+    <app-root></app-root>
+  </body>
 </html>
